--- a/events/pr-merged-develop/pr-merged-develop.yml
+++ b/events/pr-merged-develop/pr-merged-develop.yml
@@ -103,3 +103,36 @@ jobs:
             });
             
             console.log(`✅ Triggered /start release --preview for merged PR #${pr.number}`);
+            
+      - name: Delete feature branch
+        if: github.event.pull_request.merged == true
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
+          script: |
+            const pr = context.payload.pull_request;
+            const branchName = pr.head.ref;
+            
+            // Only delete feature/fix/docs/chore branches
+            if (branchName.match(/^(feature|fix|docs|chore)\//)) {
+              try {
+                await github.rest.git.deleteRef({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  ref: `heads/${branchName}`
+                });
+                console.log(`✅ Deleted branch ${branchName}`);
+                
+                // Post comment about branch deletion
+                await github.rest.issues.createComment({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: pr.number,
+                  body: `🗑️ Branch \`${branchName}\` has been deleted.`
+                });
+              } catch (error) {
+                console.log(`⚠️ Could not delete branch ${branchName}: ${error.message}`);
+              }
+            } else {
+              console.log(`ℹ️ Keeping branch ${branchName} (not a feature/fix/docs/chore branch)`);
+            }
