--- a/events/pr-merged-main/pr-merged-main.yml
+++ b/events/pr-merged-main/pr-merged-main.yml
@@ -87,3 +87,34 @@ jobs:
             });
             
             console.log('✅ Triggered /release for production');
+            
+      - name: Delete release branch
+        if: steps.check.outputs.is_release == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
+          script: |
+            const pr = context.payload.pull_request;
+            const branchName = pr.head.ref;
+            
+            // Only delete release/hotfix branches
+            if (branchName.match(/^(release|hotfix)\//)) {
+              try {
+                await github.rest.git.deleteRef({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  ref: `heads/${branchName}`
+                });
+                console.log(`✅ Deleted branch ${branchName}`);
+                
+                // Post comment about branch deletion
+                await github.rest.issues.createComment({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: pr.number,
+                  body: `🗑️ Release branch \`${branchName}\` has been deleted.`
+                });
+              } catch (error) {
+                console.log(`⚠️ Could not delete branch ${branchName}: ${error.message}`);
+              }
+            }
