fix: multiple workflow improvements from issue #69
- Allow /start commands on PR comments
- Add auto-delete for feature and release branches
- Fix pr-opened-main bot detection
- Add prerelease.lock cleanup from develop
- Add auto-sync from main to develop after release
- Update sync.sh to use merge instead of cherry-pick

--- a/commands/release/release.yml
+++ b/commands/release/release.yml
@@ -486,6 +486,18 @@ jobs:
           git add .
           git diff --cached --quiet || git commit -m "chore: clean changesets after release"
           git push
+          
+          # Also clean lock file from develop branch
+          echo "Cleaning prerelease.lock from develop branch..."
+          git fetch origin develop
+          git checkout develop
+          if [ -f ".changeset/prerelease.lock" ]; then
+            rm ".changeset/prerelease.lock"
+            git add .changeset/prerelease.lock
+            git commit -m "chore: remove prerelease.lock after release"
+            git push origin develop
+          fi
+          git checkout -
       
       - name: Create GitHub Release
         if: |
